tests/NormalTests/paczka1/small_fuzzy/66641814.err
Error in line 2: SmITFJYE A835 17,2
Error in line 3: SmITFJYE A379 43,1
Error in line 5: ZfXihDLiW A379 22,7
